--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
 						<div class="inner">
 							<h1>About me</h1>
 							<p>Hello, I am Ruifeng Cui. </br>
-								I studied at Macau University of Science and Technology as an undergraduate for four years and obtained a bachelor's degree in software engineering. I have been listed on the Dean’s Honor List for many times.
-								During the summer vacation of my junior year, I participated in the summer internship of the Institute of Automation of the Chinese Academy of Sciences and completed all the tasks given to me by my supervisor. This internship gave me a deeper understanding of deep learning and software engineering.
+								I studied at Macau University of Science and Technology as an undergraduate for four years and obtained a bachelor's degree in software engineering. I have been listed on the Dean’s Honor List for many times.</br>
+								During the summer vacation of my junior year, I participated in the summer internship of the Institute of Automation of the Chinese Academy of Sciences and completed all the tasks given to me by my supervisor. This internship gave me a deeper understanding of deep learning and software engineering.</br>
 								I am now a full-time graduate student on the Boston campus of Northeastern University, majoring in computer systems engineering. I enjoy my study and life here.
-								I am looking for a summer internship in 2021 as the start of my career.</p>
+								I am looking for a summer internship in 2021 as the start of my career.</br></p>
 							<ul class="actions">
 								<li><a href="#one" class="button scrolly">Learn more</a></li>
 							</ul>
