--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 					<nav>
 						<ul>
 							<li><a href="#intro">Welcome</a></li>
-							<li><a href="#one">Who we are</a></li>
+							<li><a href="#one">Projects</a></li>
 							<li><a href="#two">What we do</a></li>
 							<li><a href="#three">Get in touch</a></li>
 						</ul>
@@ -38,7 +38,7 @@
 							<p>Hello, I am Ruifeng Cui. </br>
 								I studied at Macau University of Science and Technology as an undergraduate for four years and obtained a bachelor's degree in software engineering. I have been listed on the Dean’s Honor List for many times.</br>
 								During the summer vacation of my junior year, I participated in the summer internship of the Institute of Automation of the Chinese Academy of Sciences and completed all the tasks given to me by my supervisor. This internship gave me a deeper understanding of deep learning and software engineering.</br>
-								I am now a full-time graduate student on the Boston campus of Northeastern University, majoring in computer systems engineering. I enjoy my study and life here.
+								I am now a full-time graduate student on the Boston campus of Northeastern University, majoring in computer systems engineering. I enjoy my study and life here.</br>
 								I am looking for a summer internship in 2021 as the start of my career.</br></p>
 							<ul class="actions">
 								<li><a href="#one" class="button scrolly">Learn more</a></li>
@@ -52,10 +52,10 @@
 							<a href="#" class="image"><img src="images/pic01.jpg" alt="" data-position="center center" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>Sed ipsum dolor</h2>
-									<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
+									<h2>E-book business web Service: Node.js based</h2>
+									<p>An online e-book trading system</p>
 									<ul class="actions">
-										<li><a href="generic.html" class="button">Learn more</a></li>
+										<li><a href="project1.html" class="button">Learn more</a></li>
 									</ul>
 								</div>
 							</div>
@@ -64,10 +64,10 @@
 							<a href="#" class="image"><img src="images/pic02.jpg" alt="" data-position="top center" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>Feugiat consequat</h2>
-									<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
+									<h2>Air quality analysis Application: Hadoop and Spark based</h2>
+									<p>A big data processing project based on distributed computing to analyze Beijing air quality and realize data visualization</p>
 									<ul class="actions">
-										<li><a href="generic.html" class="button">Learn more</a></li>
+										<li><a href="project2.html" class="button">Learn more</a></li>
 									</ul>
 								</div>
 							</div>
@@ -76,10 +76,10 @@
 							<a href="#" class="image"><img src="images/pic03.jpg" alt="" data-position="25% 25%" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>Ultricies aliquam</h2>
-									<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
+									<h2>Electronic business platform: Spring Boot based</h2>
+									<p>A high-concurrency online e-commerce platform.</p>
 									<ul class="actions">
-										<li><a href="generic.html" class="button">Learn more</a></li>
+										<li><a href="project3.html" class="button">Learn more</a></li>
 									</ul>
 								</div>
 							</div>
