update skill and adress

--- a/index.html
+++ b/index.html
@@ -94,22 +94,22 @@
 								<section>
 									<span class="icon solid major fa-code"></span>
 									<h3>Programming languages</h3>
-									<p>C, C++, Java, Python, MATLAB, C#, JavaScript</p>
+									<p>C/C++ (STL), Java, Python, MATLAB, C#, HTML5, CSS, JavaScript (ES6)</p>
 								</section>
 								<section>
 									<span class="icon solid major fa-lock"></span>
 									<h3>Framework</h3>
-									<p>Qt5, Django, jQuery, Bootstrap, React.JS, Node.JS, Spring, Express, Caffe, TensorFlow, PyTorch, Hadoop, Spark, Elasticsearch, Azkaban, Kibana, Maven</p>
+									<p>Spring Boot, jQuery, Bootstrap, React.JS, Node.JS, Express, Django, RabbitMQ, Redis, MyBatis, Caffe, TensorFlow, PyTorch, Hadoop, Spark, Elasticsearch, Azkaban, Kibana, Qt5</p>
 								</section>
 								<section>
 									<span class="icon solid major fa-cog"></span>
 									<h3>Database and tools</h3>
-									<p>MySQL, SQL Server, MongoDB, Hive, Docker, AWS, GCP, Heroku</p>
+									<p>MySQL, SQL Server, MongoDB, Hive, Docker, AWS, GCP, Heroku, Maven</p>
 								</section>
 								<section>
 									<span class="icon solid major fa-desktop"></span>
 									<h3>Knowledge</h3>
-									<p>OOP, Data Structures and Algorithms, Operating System, Computer Network</p>
+									<p>OOP/OOD, Data Structure, Algorithm, Operating System, Distributed System</p>
 								</section>
 							</div>
 						</div>
@@ -123,13 +123,13 @@
 								<section>
 									<ul class="contact">
 										<li>
-											<h3>Address</h3>
-											<span>109 John Street, Providence RI 02906<br />
+											<h3>Resume</h3>
+											<a href="https://docs.google.com/document/d/15ogv1ZK28-6Lbz1uL6slbI2Wdy5geJap/edit">Ruifeng's Resume</a>>
 											USA</span>
 										</li>
 										<li>
 											<h3>Email</h3>
-											<a href="#">ailec0623@gmail.com</a>
+											<a href="ailec0623@gmail.com">ailec0623@gmail.com</a>
 										</li>
 										<li>
 											<h3>Phone</h3>
