update some error

--- a/index.html
+++ b/index.html
@@ -124,8 +124,7 @@
 									<ul class="contact">
 										<li>
 											<h3>Resume</h3>
-											<a href="https://docs.google.com/document/d/15ogv1ZK28-6Lbz1uL6slbI2Wdy5geJap/edit">Ruifeng's Resume</a>>
-											USA</span>
+											<a href="https://docs.google.com/document/d/15ogv1ZK28-6Lbz1uL6slbI2Wdy5geJap/edit">Ruifeng's Resume</a>
 										</li>
 										<li>
 											<h3>Email</h3>
